<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            app:cardBackgroundColor="@color/colorAccent"
            app:cardCornerRadius="4dp">

            <ImageView
                android:id="@+id/iv_details_moviePoster"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_margin="4dp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/iv_details_content_description"
                android:scaleType="centerCrop" />
        </android.support.v7.widget.CardView>

        <include layout="@layout/titlebar" />

        <include
            layout="@layout/movie_subdetailsbar"
            android:layout_margin="10dp"
            android:background="@color/colorAccent" />

        <TextView
            android:id="@+id/tv_details_plot_heading"
            style="@style/DetailsPlotHeading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/plotAnalysis" />

        <TextView
            android:id="@+id/tv_details_plot"
            style="@style/BodySmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="20dp" />

        <TextView
            android:id="@+id/tv_cast_heading"
            style="@style/DetailsPlotHeading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/cast" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_cast"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal" />

        <TextView
            android:id="@+id/tv_cast_not_available"
            style="@style/BodySmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/castNotAvailable"
            android:visibility="gone" />

        <TextView
            android:id="@+id/tv_trailers_heading"
            style="@style/DetailsPlotHeading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/trailers" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_trailer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal" />

        <TextView
            android:id="@+id/tv_trailers_not_available"
            style="@style/BodySmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/trailerNotAvailable"
            android:visibility="gone" />

        <TextView
            android:id="@+id/tv_reviews_heading"
            style="@style/DetailsPlotHeading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/reviews" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_reviews"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal" />

        <TextView
            android:id="@+id/tv_reviews_not_available"
            style="@style/BodySmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/reviewsNotAvailable"
            android:visibility="gone" />

    </LinearLayout>
</android.support.v4.widget.NestedScrollView>