<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/gradient_background"
        android:elevation="5dp"
        android:padding="2dp"
        app:cardCornerRadius="8dp">

        <ImageView
            android:id="@+id/ivMovieImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/movie_content_description"
            android:scaleType="centerCrop" />
    </android.support.v7.widget.CardView>

    <TextView
        android:id="@+id/tvMovieTitle"
        style="@style/BodySmall"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="8dp"
        android:gravity="start"
        android:hint="@string/movie_text_hint" />

    <TextView
        android:id="@+id/tvReleaseDate"
        style="@style/MainActivityReleaseDate"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="start"
        android:hint="@string/movie_release_date" />

</LinearLayout>